Refactor price section in index.html
Removed unnecessary line breaks in price section.

--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
 
   <p class="par">These low-profile sneakers are your perfect casual wear companion. Featuring a
     durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-
+<div class="price-section">
   <div class="no">
     <p class="price">$125.00</p>
     <p class="percent">50%</p>
   </div>
 
   <p class="cut">$250.00</p>
-
+</div>
   <!-- Quantity + Add to Cart -->
   <div class="select">
 
